--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+    <link rel="manifest" href="./icons/site.webmanifest">
 </head>
 <body>
     <header class="header">
@@ -251,8 +253,8 @@
             </div>
             <div class="call">
                 <div class="subtitle">Или позвоните нам</div>
-                <a href="#" class="link">+380678341034</a>
-                <a href="#" class="link">+380500941356</a>
+                <a href="#" class="link">+1111111</a>
+                <a href="#" class="link">+1111111</a>
             </div>
         </div>
     </footer>
@@ -271,6 +273,6 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
