--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 <img src="icons/logo.svg" alt="Логотип">
             </div>
             <nav class="header__links">
-                <a href="#" class="header__link">Доставка питания</a>
-                <a href="#" class="header__link">Второй пункт</a>
+                <h1>Сервис по выбору и доставке питания</h1>
             </nav>
         </div>
         <div class="header__right-block">
